--- a/content.css
+++ b/content.css
@@ -27,7 +27,7 @@ body {
   align-items: center;
 }
 
-#component1 {
+#component4 {
   background-color: rgb(19, 18, 18);
   padding: 10px;
   margin-left: 10px;
@@ -36,9 +36,9 @@ body {
   box-shadow: 0px 0px 5px #ccc; /* add a subtle box shadow */
 }
 
+#component1,
 #component2,
-#component3,
-#component4 {
+#component3 {
   background-color: rgb(31, 30, 30);
   padding: 10px;
   margin-left: 10px;
@@ -55,6 +55,16 @@ body {
 /* CSS for main content */
 #main-content {
   margin: 50px;
+}
+
+#text-content {
+    background-color: #333;
+    padding: 10px;
+    margin-left: 10px;
+    border-radius: 5px; /* add rounded corners */
+    margin-right: 10px;
+    box-shadow: 0px 0px 5px #ccc; /* add a subtle box shadow */
+    margin: 50px;
 }
 
 #headline {
@@ -160,4 +170,3 @@ a:hover {
     display: flex;
   }
 }
-
