--- a/hergueleray_tscheckit01.css
+++ b/hergueleray_tscheckit01.css
@@ -27,7 +27,7 @@ body {
   align-items: center;
 }
 
-#component4 {
+#component2 {
   background-color: rgb(19, 18, 18);
   padding: 10px;
   margin-left: 10px;
@@ -37,8 +37,8 @@ body {
 }
 
 #component1,
-#component2,
-#component3 {
+#component3,
+#component4 {
   background-color: rgb(31, 30, 30);
   padding: 10px;
   margin-left: 10px;
@@ -46,7 +46,7 @@ body {
   margin-right: 10px;
 }
 
-#component2:hover,
+#component1:hover,
 #component3:hover,
 #component4:hover {
   background-color: #666; /* change link text color on hover */
@@ -55,16 +55,6 @@ body {
 /* CSS for main content */
 #main-content {
   margin: 50px;
-}
-
-#text-content {
-    background-color: #333;
-    padding: 10px;
-    margin-left: 10px;
-    border-radius: 5px; /* add rounded corners */
-    margin-right: 10px;
-    box-shadow: 0px 0px 5px #ccc; /* add a subtle box shadow */
-    margin: 50px;
 }
 
 #headline {
@@ -80,7 +70,7 @@ summary {
   height: auto; /* set a fixed height for the li elements */
   display: flex; /* create a flex container for the li elements */
   flex-wrap: wrap; /* allow the elements to wrap onto multiple rows */
-  margin-top: 20px; /* add 10px margin to the top and bottom of each list item */
+  margin: 10px 0; /* add 10px margin to the top and bottom of each list item */
   padding: 10px; /* add 10px padding to each list item */
   background-color: #cfcfcf; /* add a light gray background color */
   border-radius: 5px; /* add rounded corners */
@@ -106,10 +96,8 @@ span {
     box-shadow: 0px 0px 5px #ccc; /* add a subtle box shadow */
     margin-left: 60px;
     margin-right: 60px;
-    /* margin-bottom: 20px; */
+    margin-bottom: 20px;
     color: #000;
-    justify-content: space-between; /* Distribute the items evenly in the container */
-
   }
   
   span:hover {
@@ -168,5 +156,34 @@ a:hover {
 
   #menu-toggle:checked ~#right-components{
     display: flex;
+  }
+}
+
+/* css for link */
+
+#link {
+  font-size: 10pt;
+}
+
+/* @media for changing the font sizes */
+
+@media (max-width: 300px) {
+  p{
+    font-size: xx-small;
+  }
+  span {
+    font-size:xx-small;
+  }
+  h3 {
+    font-size: small;
+  }
+  li {
+    font-size: xx-small;
+  }
+}
+
+@media (max-width: 500px) {
+  #link {
+    font-size: 6pt;
   }
 }
